backend 설정 변경